# unified_url_toolkit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DoD_CHECKLIST.md  MIGRATION.md  MISSINGMORE  PHASE2_COMPLETION.md  README.md  README_20260220_144211.md.bak  SECURITY.md  SURGERY_REPORT.md  VERIFY.md  __init__.py  domains.txt  justfile  project-tree-report.txt  project_tree.py  pyproject.toml  requirements.txt  urls_extract_20260308_054118.txt  urls_extract_20260308_054613.txt
.dodkit/: template.json
.github/: dependabot.yml  pull_request_template.md
analysis/: README.md  README_20260220_144211.md.bak  __init__.py  categorizers.py
cli/: README.md  README_20260220_144211.md.bak  __init__.py  check_links.py  clean_domains.py  extract_urls.py
config/: README.md  README_20260220_144211.md.bak  __init__.py  settings.py
core/: README.md  README_20260220_144211.md.bak  __init__.py  checkers.py  extractors.py  normalizers.py  patterns.py  validators.py
docs/: ARCHITECTURE.md  README.md  USAGE.md  VISION_AND_PLAN.md
examples/: README.md  README_20260220_144211.md.bak  advanced_usage.py  basic_usage.py  specialized_modules.py
io/: README.md  README_20260220_144211.md.bak  __init__.py  readers.py  writers.py
processing/: README.md  README_20260220_144211.md.bak  __init__.py  parallel.py
specialized/: README.md  README_20260220_144211.md.bak  __init__.py  cache_analyzer.py  content_inspector.py  dom_parser.py  http_analyzer.py  http_inspector.py  link_checker.py  metadata_extractor.py  redirect_mapper.py  security_analyzer.py
(+19 files in other folders)
